--- a/details/science-technology-serv.html
+++ b/details/science-technology-serv.html
@@ -16,7 +16,7 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1">
-		<span class="back-button">
+		<span class="back-button"  onclick="history.go(-1)">
 			<i></i>
 			科技服务
 		</span>
