--- a/lists/Bidding-Hall-list.html
+++ b/lists/Bidding-Hall-list.html
@@ -237,7 +237,7 @@
 							<span>金额：<b><font>￥</font>300</b>万</span>
 							<span><i></i><font>广东深圳</font></span>
 						</div>
-						<input class="fr rads c5" type="button" value="参与投标" />
+						<input class="fr rads c5" type="button" value="我要投标" />
 					</div>
 					<div class="tender_time clear">
 						<span class="fl">
@@ -262,7 +262,7 @@
 							<span>金额：<b><font>￥</font>300</b>万</span>
 							<span><i></i><font>广东深圳</font></span>
 						</div>
-						<input class="fr rads c5" type="button" value="参与投标" />
+						<input class="fr rads c5" type="button" value="我要投标" />
 					</div>
 					<div class="tender_time clear">
 						<span class="fl">
@@ -287,7 +287,7 @@
 							<span>金额：<b><font>￥</font>300</b>万</span>
 							<span><i></i><font>广东深圳</font></span>
 						</div>
-						<input class="fr rads c5" type="button" value="参与投标" />
+						<input class="fr rads c5" type="button" value="我要投标" />
 					</div>
 					<div class="tender_time clear">
 						<span class="fl">
@@ -312,7 +312,7 @@
 							<span>金额：<b><font>￥</font>300</b>万</span>
 							<span><i></i><font>广东深圳</font></span>
 						</div>
-						<input class="fr rads c5" type="button" value="参与投标" />
+						<input class="fr rads c5" type="button" value="我要投标" />
 					</div>
 					<div class="tender_time clear">
 						<span class="fl">
@@ -350,6 +350,7 @@
 		jumpPage($(".footer ul").find("li").eq(1),"Bidding-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(2),"Reward-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(3),"../my/my.html");
+		jumpPage($(".participate  input"),"../details/tender-details-hall.html");
 	</script>
 </body>
 </html>
