--- a/lists/Technology-Service.html
+++ b/lists/Technology-Service.html
@@ -350,5 +350,8 @@
 	<!-- content end -->
 
 	<script type="text/javascript" src="../js/mian.js"></script>
+	<script type="text/javascript">
+		jumpPage($(".see_details"),"../details/science-technology-serv.html");
+	</script>
 </body>
 </html>
