--- a/my/my.html
+++ b/my/my.html
@@ -124,6 +124,7 @@
 		jumpPage($(".footer ul").find("li").eq(0),"../index.html");
 		jumpPage($(".footer ul").find("li").eq(1),"../lists/Bidding-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(2),"../lists/Reward-Hall-list.html");
+		jumpPage($(".my_head_wrap"),"account-settings.html");
 		jumpPage($(".item_setting"),"account-settings.html");
 
 		$(".my_balance_ck i").click(function(){
@@ -135,6 +136,8 @@
 				$(".my_balance_ck b").text("********");
 			};
 		});
+
+
 	</script>
 </body>
 </html>
