--- a/details/financial-support-details.html
+++ b/details/financial-support-details.html
@@ -15,7 +15,7 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1">
-		<span class="back-button">
+		<span class="back-button"  onclick="history.go(-1)">
 			<i></i>
 			金融支持
 		</span>
