--- a/details/service-shops.html
+++ b/details/service-shops.html
@@ -16,7 +16,7 @@
 <body>
 	<!-- head start -->
 	<header class="header psa clear bg-color1">
-		<span class="back-button">
+		<span class="back-button"  onclick="history.go(-1)">
 			<i></i>
 			服务商店铺
 		</span>
