--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
 			<div class="zyhp_box">
 				<ul class="clear tjfws_wrap">
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -256,7 +256,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -264,7 +264,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -272,7 +272,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -280,7 +280,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -288,7 +288,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -296,7 +296,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/ah_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -304,7 +304,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/sx_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -312,7 +312,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -320,7 +320,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/service-shops.html">
 							<div class="Service_img">
 								<img src="images/hy_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -402,11 +402,11 @@
 
 		<!-- 技术服务 start -->
 		<div class="Service_provider technical_service b5 mr8">
-			<h3 class="title_name">技术服务</h3>
+			<h3 class="title_name">科技服务</h3>
 			<div class="zyhp_box">
 				<ul class="clear jsfw_wrap">
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/science-technology-serv.html">
 							<div class="Service_img">
 								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -419,7 +419,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/science-technology-serv.html">
 							<div class="Service_img">
 								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -432,7 +432,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="c2" href="javascript:;">
+						<a class="c2" href="details/science-technology-serv.html">
 							<div class="Service_img">
 								<img src="images/dm_img.jpg" width="100%" height="100%" alt=""/>
 							</div>
@@ -609,6 +609,12 @@
 		jumpPage($(".footer ul").find("li").eq(1),"lists/Bidding-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(2),"lists/Reward-Hall-list.html");
 		jumpPage($(".footer ul").find("li").eq(3),"my/my.html");
+
+		//消息跳转
+		jumpPage($(".flbtn"),"lists/news.html");
+
+		//招标详情跳转
+		jumpPage($(".Bidding_Hall ol").find("li"),"details/tender-details-hall.html");
 	</script>
 </body>
 </html>
