添加金融支持列表页

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="details/financial-support-details.html">
+							<a href="lists/financial-support-list.html">
 								<i></i>
 								<span>
 									金融支持
@@ -402,7 +402,7 @@
 
 		<!-- 技术服务 start -->
 		<div class="Service_provider technical_service b5 mr8">
-			<h3 class="title_name">科技服务</h3>
+			<h3 class="title_name">技术服务</h3>
 			<div class="zyhp_box">
 				<ul class="clear jsfw_wrap">
 					<li>
@@ -452,7 +452,7 @@
 		<!-- 优质项目 start -->
 		<div class="Quality_project b5 mr8 mb0 mbt9">
 			<h3 class="title_name">优质项目
-				<a class="fr" href="javascript:;">查看更多<i class="fm">&gt;</i></a>
+				<a class="fr" href="lists/financial-support-list.html">查看更多<i class="fm">&gt;</i></a>
 			</h3>
 			<ul class="clear">
 				<li>
