--- a/details/financial-support-details.html
+++ b/details/financial-support-details.html
@@ -43,7 +43,9 @@
 				<button class="focus">+关注</button>
 				<button class="share">+分享</button>
 			</div>
-			<div class="details-detial">安徽某企业资金500万-6亿元寻房地产等项目合作</div>
+			<div class="details-detial">	
+				安徽某企业资金500万-6亿元寻房地产等项目合作
+			</div>
 		</div>
 		<div class="details-unit b5">
 			<p class="details-pft">资金主体：企业资金</p>
@@ -71,7 +73,7 @@
 			<p>抵押物类型：固定资产  其它资产抵押物</p>
 			<p>折扣率：5-7折</p>
 		</div>
-		<div class="details-unit details-p b5 details-unit-mb">
+		<div class="details-unit details-p b5">
 			<p class="details-pft">昨日项目方投递项目共计<span>3121</span>次</p>
 			<p>立即投递项目，信息直接发送至投资人，融资更主动</p>
 		</div>
@@ -84,11 +86,8 @@
 			<h2 class="leve-message l-border">用户留言(<span>11</span>)</h2>
 			<form>
 				<textarea placeholder="提示：严禁发布含有联系方式和广告性质的内容，违者一律删除！"></textarea>
+				<button class="project-button fr" type="submit">发布留言</button>
 			</form>
-		</div>
-		<div class="details-unit details-p b5 details-unit-mb">
-			<h2 class="l-border">评价</h2>
-			<p class="details-evaluate"><b><img src="../images/details/evaluate-img.jpg" width="100%" height="100%"></b>评价超时，系统自动好评</p>
 		</div>
 	</section>
 	<!-- content end -->
