add pages and page target

--- a/details/financial-support-details.html
+++ b/details/financial-support-details.html
@@ -73,7 +73,7 @@
 			<p>抵押物类型：固定资产  其它资产抵押物</p>
 			<p>折扣率：5-7折</p>
 		</div>
-		<div class="details-unit details-p b5">
+		<div class="details-unit details-p b5 details-unit-mb">
 			<p class="details-pft">昨日项目方投递项目共计<span>3121</span>次</p>
 			<p>立即投递项目，信息直接发送至投资人，融资更主动</p>
 		</div>
