--- a/lists/bk-college.html
+++ b/lists/bk-college.html
@@ -42,7 +42,7 @@
 					<!-- 行业专家 start -->
 					<ul class="clear" style="display: block;">
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert1.png" width="100%" height="100%" alt="" />
 								</div>
@@ -51,7 +51,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert2.png" width="100%" height="100%" alt="" />
 								</div>
@@ -60,7 +60,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert3.png" width="100%" height="100%" alt="" />
 								</div>
@@ -69,7 +69,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert4.png" width="100%" height="100%" alt="" />
 								</div>
@@ -83,7 +83,7 @@
 					<!-- 民间高手 start -->
 					<ul class="clear">
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert2.png" width="100%" height="100%" alt="" />
 								</div>
@@ -92,7 +92,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert3.png" width="100%" height="100%" alt="" />
 								</div>
@@ -101,7 +101,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert4.png" width="100%" height="100%" alt="" />
 								</div>
@@ -115,7 +115,7 @@
 					<!-- 老师傅 start -->
 					<ul class="clear">
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert3.png" width="100%" height="100%" alt="" />
 								</div>
@@ -124,7 +124,7 @@
 							</a>
 						</li>
 						<li>
-							<a href="javascript:;">
+							<a href="../details/expert-introduction.html">
 								<div class="figure_head">
 									<img src="../images/lists/expert4.png" width="100%" height="100%" alt="" />
 								</div>
@@ -140,7 +140,7 @@
 			<div class="list_box article_banner mt2">
 				<div class="swiper-wrapper">
 		        	<div class="swiper-slide clear">
-		        		<a href="javascript:;">
+		        		<a href="../details/paper-details.html">
 							<div class="left_img fl">
 								<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
 							</div>
@@ -151,22 +151,26 @@
 						</a>
 					</div>
 					<div class="swiper-slide clear">
-						<div class="left_img fl">
-							<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
-						</div>
-						<div class="right_content fl">
-							<h4>紫禁之巅，极致智云</h4>
-							<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
-						</div>
+						<a href="../details/paper-details.html">
+							<div class="left_img fl">
+								<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
+							</div>
+							<div class="right_content fl">
+								<h4>紫禁之巅，极致智云</h4>
+								<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
+							</div>
+						</a>
 					</div>
 					<div class="swiper-slide clear">
-						<div class="left_img fl">
-							<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
-						</div>
-						<div class="right_content fl">
-							<h4>紫禁之巅，极致智云</h4>
-							<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
-						</div>
+						<a href="../details/paper-details.html">
+							<div class="left_img fl">
+								<img src="../images/lists/article_banner.png" width="100%" height="100%" alt="" />
+							</div>
+							<div class="right_content fl">
+								<h4>紫禁之巅，极致智云</h4>
+								<p>云栖大会北京峰会震撼来袭！8月8日-9日，出没前言技术脉搏，洞见计算未来趋势，火速报名！</p>
+							</div>
+						</a>
 					</div>
 		        </div>
 		        <div class="pagination"></div>
@@ -182,7 +186,7 @@
 				</h3>
 				<ul class="wz_list">
 					<li class="clear">
-						<a href="javascript:;">
+						<a href="../details/paper-details.html">
 							<div class="information_img fl">
 								<img src="../images/lists/zx1.png" width="100%" height="100%" alt="" />
 							</div>
@@ -194,7 +198,7 @@
 						</a>
 					</li>
 					<li class="clear">
-						<a href="javascript:;">
+						<a href="../details/paper-details.html">
 							<div class="information_img fl">
 								<img src="../images/lists/zx2.png" width="100%" height="100%" alt="" />
 							</div>
@@ -206,7 +210,7 @@
 						</a>
 					</li>
 					<li class="clear">
-						<a href="javascript:;">
+						<a href="../details/paper-details.html">
 							<div class="information_img fl">
 								<img src="../images/lists/zx3.png" width="100%" height="100%" alt="" />
 							</div>
@@ -219,7 +223,7 @@
 						</a>
 					</li>
 					<li class="clear">
-						<a href="javascript:;">
+						<a href="../details/paper-details.html">
 							<div class="information_img fl">
 								<img src="../images/lists/zx4.png" width="100%" height="100%" alt="" />
 							</div>
@@ -231,7 +235,7 @@
 						</a>
 					</li>
 					<li class="clear">
-						<a href="javascript:;">
+						<a href="../details/paper-details.html">
 							<div class="information_img fl">
 								<img src="../images/lists/zx5.png" width="100%" height="100%" alt="" />
 							</div>
@@ -256,7 +260,7 @@
 				<div class="list_box article_banner activity">
 					<div class="swiper-wrapper">
 			        	<div class="swiper-slide">
-			        		<a href="javascript:;">
+			        		<a href="../details/paper-details.html">
 			        			<div class="activity_img">
 			        				<img src="../images/lists/activity_banner1.png" width="100%" height="100%" alt="" />
 			        			</div>	
@@ -264,7 +268,7 @@
 			        		</a>
 			        	</div>
 			        	<div class="swiper-slide">
-			        		<a href="javascript:;">
+			        		<a href="../details/paper-details.html">
 			        			<div class="activity_img">
 			        				<img src="../images/lists/activity_banner1.png" width="100%" height="100%" alt="" />
 			        			</div>	
@@ -272,7 +276,7 @@
 			        		</a>
 			        	</div>
 			        	<div class="swiper-slide">
-			        		<a href="javascript:;">
+			        		<a href="../details/paper-details.html">
 			        			<div class="activity_img">
 			        				<img src="../images/lists/activity_banner1.png" width="100%" height="100%" alt="" />
 			        			</div>	
@@ -295,7 +299,7 @@
 					<!-- 学术发表 start -->
 					<ul class="wz_list">
 						<li class="clear">
-							<a href="javascript:;">
+							<a href="../details/paper-details.html">
 								<div class="information_img fl">
 									<img src="../images/lists/xsfb1.png" width="100%" height="100%" alt="" />
 								</div>
@@ -307,7 +311,7 @@
 							</a>
 						</li>
 						<li class="clear">
-							<a href="javascript:;">
+							<a href="../details/paper-details.html">
 								<div class="information_img fl">
 									<img src="../images/lists/xsfb2.png" width="100%" height="100%" alt="" />
 								</div>
@@ -319,7 +323,7 @@
 							</a>
 						</li>
 						<li class="clear">
-							<a href="javascript:;">
+							<a href="../details/paper-details.html">
 								<div class="information_img fl">
 									<img src="../images/lists/xsfb3.png" width="100%" height="100%" alt="" />
 								</div>
