--- a/lists/expert-think-tank.html
+++ b/lists/expert-think-tank.html
@@ -264,10 +264,12 @@
 		<div class="expert_list b5">
 			<ul class="expert_think_tank clear">
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="../details/expert-introduction.html">
 						<img src="../images/lists/lzw_img.jpg" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">刘滋武</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">刘滋武</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>江苏徐州</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
@@ -275,10 +277,14 @@
 					</div>
 				</li>
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="expert-introduction.html">
 						<img src="../images/lists/lnf_img.png" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">林宁副</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">
+							林宁副
+						</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>湖北武汉</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
@@ -286,10 +292,14 @@
 					</div>
 				</li>
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="expert-introduction.html">
 						<img src="../images/lists/flh_img.png" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">樊李红</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">
+							樊李红
+						</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>安徽合肥</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
@@ -297,10 +307,14 @@
 					</div>
 				</li>
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="expert-introduction.html">
 						<img src="../images/lists/lzw_img.jpg" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">刘滋武</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">
+							刘滋武
+						</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>江苏徐州</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
@@ -308,10 +322,14 @@
 					</div>
 				</li>
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="expert-introduction.html">
 						<img src="../images/lists/lnf_img.png" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">林宁副</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">
+							林宁副
+						</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>湖北武汉</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
@@ -319,10 +337,14 @@
 					</div>
 				</li>
 				<li>
-					<a class="expert_img" href="javascript:;">
+					<a class="expert_img" href="expert-introduction.html">
 						<img src="../images/lists/flh_img.png" width="100%" height="100%">
 					</a>
-					<h4 class="expert_name">樊李红</h4>
+					<h4 class="expert_name">
+						<a href="../details/expert-introduction.html">
+							樊李红
+						</a>
+					</h4>
 					<div class="expert_positiopn"><i></i>安徽合肥</div>
 					<p class="expert_field">领域：生物化工</p>
 					<div class="advisory_expert">
