--- a/lists/news-list.html
+++ b/lists/news-list.html
@@ -29,7 +29,7 @@
 	<section class="mt9">
 		<ul class="account-settings brt news_list">
 			<li class="setting_item clear">
-				<a href="javascript:;">
+				<a href="../details/message-details.html">
 					<b>好消息！做设计、搞创作、写...统统看过了！</b>
 					<span class="settings_item_num fr">
 						2016/10/23
@@ -37,7 +37,7 @@
 				</a>
 			</li>
 			<li class="setting_item clear">
-				<a href="javascript:;">
+				<a href="../details/message-details.html">
 					<b>好消息！做设计、搞创作、写...统统看过了！</b>
 					<span class="settings_item_num fr">
 						2016/10/21
@@ -45,7 +45,7 @@
 				</a>
 			</li>
 			<li class="setting_item clear">
-				<a href="javascript:;">
+				<a href="../details/message-details.html">
 					<b>好消息！做设计、搞创作、写...统统看过了！</b>
 					<span class="settings_item_num fr">
 						2016/10/19
