添加交易记录列表及添加效果

--- a/lists/bk-college.html
+++ b/lists/bk-college.html
@@ -444,20 +444,7 @@
 	<script type="text/javascript">
 		//pc 移动端事件兼容处理
 		var isEv = /Mobile/.test(window.navigator.userAgent);
-		var touchstart = "";
-		var touchmove = "";
-		var touchend = "";
-
-		if(isEv){
-			touchstart = "touchstart";
-			touchmove = "touchmove";
-			touchend = "touchend";
-		}else{
-			touchstart = "mousedown";
-			touchmove = "mousemove";
-			touchend = "mouseup";
-		};
-
+		var touchstart = isEv?"touchstart":"click";
 
 		//专家切换
 		var $screenBtn = $(".list_screen_btn").find("span");
