--- a/lists/Results-release-list.html
+++ b/lists/Results-release-list.html
@@ -31,25 +31,33 @@
 				<div class="swiper-slide">
 					<ol class="clear">
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn1.png" width="100%" height="100%">
+							</i>
 							<span>
 								电子信息
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn2.png" width="100%" height="100%">
+							</i>
 							<span>
 								电器自动化
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn3.png" width="100%" height="100%">
+							</i>
 							<span>
 								化学化工
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn4.png" width="100%" height="100%">
+							</i>
 							<span>
 								新能源
 							</span>
@@ -57,25 +65,33 @@
 					</ol>
 					<ol class="clear">
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn5.png" width="100%" height="100%">
+							</i>
 							<span>
 								机械
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn6.png" width="100%" height="100%">
+							</i>
 							<span>
 								环保和资源
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn7.png" width="100%" height="100%">
+							</i>
 							<span>
 								安全防护
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn8.png" width="100%" height="100%">
+							</i>
 							<span>
 								仪器仪表
 							</span>
@@ -85,25 +101,33 @@
 				<div class="swiper-slide">
 					<ol class="clear">
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn1.png" width="100%" height="100%">
+							</i>
 							<span>
 								电子信息
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn2.png" width="100%" height="100%">
+							</i>
 							<span>
 								电器自动化
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn3.png" width="100%" height="100%">
+							</i>
 							<span>
 								化学化工
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn4.png" width="100%" height="100%">
+							</i>
 							<span>
 								新能源
 							</span>
@@ -111,25 +135,33 @@
 					</ol>
 					<ol class="clear">
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn5.png" width="100%" height="100%">
+							</i>
 							<span>
 								机械
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn6.png" width="100%" height="100%">
+							</i>
 							<span>
 								环保和资源
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn7.png" width="100%" height="100%">
+							</i>
 							<span>
 								安全防护
 							</span>
 						</li>
 						<li>
-							<i></i>
+							<i>
+								<img src="../images/lists/list_btn8.png" width="100%" height="100%">
+							</i>
 							<span>
 								仪器仪表
 							</span>
