--- a/my/transaction-record.html
+++ b/my/transaction-record.html
@@ -28,12 +28,14 @@
 	<!-- content start -->
 	<section class="mt9">
 		<ul class="jy_list">
+			<span class="jy_list_title">最近交易记录</span>
 			<li>
 				<div class="clear">
 					<span class="fl jy_name">
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
@@ -62,6 +64,7 @@
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
@@ -90,6 +93,7 @@
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
@@ -118,6 +122,7 @@
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
@@ -146,6 +151,7 @@
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
@@ -174,6 +180,7 @@
 						<i>○</i>数据交换前置开发系统
 					</span>
 					<i class="fr yjt_icon"></i>	
+					<span class="fr jy_money">+1000.00</span>
 				</div>
 				<div class="transaction_details">
 					<p>
